--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.8.2"
   }
 }
